--- a/login.ui
+++ b/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>564</width>
-    <height>417</height>
+    <width>438</width>
+    <height>328</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,11 +22,14 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>531</width>
+      <width>411</width>
       <height>131</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
+     <property name="rowWrapPolicy">
+      <enum>QFormLayout::WrapAllRows</enum>
+     </property>
      <property name="horizontalSpacing">
       <number>2</number>
      </property>
@@ -47,7 +50,7 @@
         <set>Qt::AlignCenter</set>
        </property>
        <property name="margin">
-        <number>14</number>
+        <number>0</number>
        </property>
       </widget>
      </item>
@@ -77,7 +80,7 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
        <property name="margin">
-        <number>14</number>
+        <number>0</number>
        </property>
       </widget>
      </item>
@@ -98,10 +101,10 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>160</y>
-      <width>361</width>
-      <height>221</height>
+      <x>90</x>
+      <y>150</y>
+      <width>241</width>
+      <height>141</height>
      </rect>
     </property>
     <property name="text">
