--- a/GUIui/login.ui
+++ b/GUIui/login.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>438</width>
-    <height>328</height>
+    <height>394</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,7 +44,7 @@
         </font>
        </property>
        <property name="text">
-        <string>User Name</string>
+        <string>Email</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -55,7 +55,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="emailLineEdit">
        <property name="font">
         <font>
          <pointsize>16</pointsize>
@@ -85,7 +85,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2">
+      <widget class="QLineEdit" name="passwordLineEdit">
        <property name="font">
         <font>
          <pointsize>16</pointsize>
@@ -103,7 +103,7 @@
      <rect>
       <x>90</x>
       <y>150</y>
-      <width>241</width>
+      <width>251</width>
       <height>141</height>
      </rect>
     </property>
@@ -115,6 +115,27 @@
     </property>
     <property name="scaledContents">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="submitBtn">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>330</y>
+      <width>411</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(235, 250, 250);</string>
+    </property>
+    <property name="text">
+     <string>Submit</string>
     </property>
    </widget>
   </widget>
