--- a/GUIui/createAdmin.ui
+++ b/GUIui/createAdmin.ui
@@ -264,10 +264,10 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>60</y>
-      <width>381</width>
-      <height>401</height>
+      <x>390</x>
+      <y>20</y>
+      <width>351</width>
+      <height>491</height>
      </rect>
     </property>
     <property name="text">
@@ -276,8 +276,8 @@
     <property name="pixmap">
      <pixmap>media/pharmacist-logo.jpg</pixmap>
     </property>
-    <property name="scaledContents">
-     <bool>true</bool>
+    <property name="alignment">
+     <set>Qt::AlignHCenter|Qt::AlignTop</set>
     </property>
    </widget>
   </widget>
