--- a/GUIui/addMedication.ui
+++ b/GUIui/addMedication.ui
@@ -23,7 +23,7 @@
       <x>10</x>
       <y>10</y>
       <width>691</width>
-      <height>411</height>
+      <height>430</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -43,7 +43,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="genricNameLineEdit">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -70,7 +70,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit_2">
+      <widget class="QLineEdit" name="commertialNameLineEdit">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -97,7 +97,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEdit_3">
+      <widget class="QLineEdit" name="activeIngridiantLineEdit">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -124,7 +124,7 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QComboBox" name="comboBox">
+      <widget class="QComboBox" name="cunsumptionComboBox">
        <property name="font">
         <font>
          <pointsize>16</pointsize>
@@ -135,7 +135,7 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <widget class="QLabel" name="label_5">
        <property name="font">
         <font>
@@ -150,35 +150,8 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="lineEdit_4">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background-color:rgb(233, 245, 244)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="font">
-        <font>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Main usage</string>
-       </property>
-       <property name="margin">
-        <number>0</number>
-       </property>
-      </widget>
-     </item>
      <item row="5" column="1">
-      <widget class="QLineEdit" name="lineEdit_5">
+      <widget class="QLineEdit" name="dosageLineEdit">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -190,6 +163,33 @@
       </widget>
      </item>
      <item row="6" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Main Usage</string>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QLineEdit" name="mainUsageLineEdit">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:rgb(233, 245, 244)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
       <widget class="QLabel" name="label_8">
        <property name="font">
         <font>
@@ -204,8 +204,8 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="QLineEdit" name="lineEdit_6">
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="storageLineEdit">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
@@ -216,7 +216,7 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
+     <item row="8" column="0">
       <widget class="QLabel" name="label_7">
        <property name="font">
         <font>
@@ -231,7 +231,7 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="0">
+     <item row="9" column="0">
       <widget class="QLabel" name="label_9">
        <property name="font">
         <font>
@@ -240,14 +240,14 @@
        </property>
        <property name="text">
         <string>Allergens and
- reservations</string>
+ Restrictions</string>
        </property>
        <property name="margin">
         <number>0</number>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
+     <item row="8" column="1">
       <widget class="QScrollArea" name="scrollArea">
        <property name="widgetResizable">
         <bool>true</bool>
@@ -264,11 +264,16 @@
         <widget class="QTextEdit" name="textEdit_3">
          <property name="geometry">
           <rect>
-           <x>-7</x>
+           <x>0</x>
            <y>0</y>
-           <width>561</width>
-           <height>91</height>
+           <width>481</width>
+           <height>71</height>
           </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
          </property>
          <property name="styleSheet">
           <string notr="true">background-color:rgb(247, 255, 247);</string>
@@ -277,7 +282,7 @@
        </widget>
       </widget>
      </item>
-     <item row="8" column="1">
+     <item row="9" column="1">
       <widget class="QScrollArea" name="scrollArea_2">
        <property name="widgetResizable">
         <bool>true</bool>
@@ -294,11 +299,16 @@
         <widget class="QTextEdit" name="textEdit_4">
          <property name="geometry">
           <rect>
-           <x>-7</x>
+           <x>0</x>
            <y>0</y>
-           <width>561</width>
-           <height>91</height>
+           <width>481</width>
+           <height>71</height>
           </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
          </property>
          <property name="styleSheet">
           <string notr="true">background-color:rgb(247, 255, 247);</string>
@@ -307,15 +317,39 @@
        </widget>
       </widget>
      </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Medication Type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QComboBox" name="typeComboBox">
+       <property name="font">
+        <font>
+         <pointsize>16</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color:rgb(247, 255, 247);</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>430</y>
-      <width>341</width>
-      <height>201</height>
+      <x>20</x>
+      <y>450</y>
+      <width>351</width>
+      <height>191</height>
      </rect>
     </property>
     <property name="text">
@@ -326,6 +360,27 @@
     </property>
     <property name="scaledContents">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="submitBtn">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>460</y>
+      <width>271</width>
+      <height>171</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(204, 235, 207);</string>
+    </property>
+    <property name="text">
+     <string>Sbmit</string>
     </property>
    </widget>
   </widget>
