--- a/GUIui/main.ui
+++ b/GUIui/main.ui
@@ -260,6 +260,11 @@
         <height>161</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
      </widget>
     </widget>
    </widget>
